Eslint dependency and fixes in tests

--- a/FrontEnd/output/report.html
+++ b/FrontEnd/output/report.html
@@ -73,11 +73,11 @@
       <div class="client-logo" style="padding:15px"></div>
       <div class="bg-primary" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
         <h3>Summary</h3><br>
-        <p class="lead">Start Time: Fri Sep 24 2021 12:11:50 GMT-0500 (Central Daylight Time)</p>
-        <p class="lead">Browsers: Chrome 93.0.4577.82 / macOS 10.15.7</p>
-        <p class="lead">Duration: 1m 29s</p>
-        <p class="lead">Tests Failed: 0 out of 7</p>
-        <p class="lead">Tests Skipped: 1</p>
+        <p class="lead">Start Time: Fri Oct 01 2021 10:14:05 GMT-0500 (Central Daylight Time)</p>
+        <p class="lead">Browsers: Chrome 94.0.4606.61 / macOS 10.15.7</p>
+        <p class="lead">Duration: 1m 47s</p>
+        <p class="lead">Tests Failed: 0 out of 8</p>
+        <p class="lead">Tests Skipped: 0</p>
       </div><br>
       <table class="table sortable" style="padding:15px;box-shadow: 6px 6px 6px 6px #00000033;border-radius: 10px;">
         <thead>
@@ -91,27 +91,27 @@
           </tr>
         </thead>
         <tbody>
-           <tr class="warning">
+           <tr class="success">
   <td>1</td>
   <td>Login Feature Testing</td>
   <td>Login with a valid user: </td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
-  <td>0s</td>
-  <td>skipped</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
+  <td>14s</td>
+  <td>passed</td>
  </tr>
  <tr class="success">
   <td>2</td>
   <td>Login Feature Testing</td>
   <td>Login with an invalid user: </td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
-  <td>10s</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
+  <td>8s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
   <td>3</td>
   <td>Login Feature Testing</td>
   <td>Login with a non registered email: </td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
   <td>9s</td>
   <td>passed</td>
  </tr>
@@ -119,7 +119,7 @@
   <td>4</td>
   <td>Login Feature Testing</td>
   <td>Login with an invalid password: </td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
   <td>9s</td>
   <td>passed</td>
  </tr>
@@ -127,32 +127,32 @@
   <td>5</td>
   <td>Login Feature Testing</td>
   <td>Login with no email: </td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
-  <td>8s</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
+  <td>9s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
   <td>6</td>
   <td>Login Feature Testing</td>
   <td>Login with no password: </td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
-  <td>8s</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
+  <td>9s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
   <td>7</td>
   <td>Task Feature Testing</td>
   <td>Create a task</td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
-  <td>14s</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
+  <td>16s</td>
   <td>passed</td>
  </tr>
  <tr class="success">
   <td>8</td>
   <td>Task Feature Testing</td>
   <td>Create 10 tasks</td>
-  <td>Chrome 93.0.4577.82 / macOS 10.15.7</td>
-  <td>31s</td>
+  <td>Chrome 94.0.4606.61 / macOS 10.15.7</td>
+  <td>33s</td>
   <td>passed</td>
  </tr>
 
